--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="about-section">
-            <img src="./Assets/saffu-UTZolLez14A-unsplash.jpg" alt="Green Mountain and Boats (Grrdz, 2017)." class="section-img">
+            <img src="./Assets/saffu-UTZolLez14A-unsplash.jpg" alt="Island Dock captured by Saffu. (2018). Unsplash." title="Saffu. (2018). Unsplash." class="section-img">
             <div class="section-text">
                 <h2 id="about">A Tiny Island with Big Adventures</h2>
                 <p>Taniti is a small, tropical island in the Pacific. While the island has an area of less than 500 square miles, the terrain is varied and includes both sandy and rocky beaches, a small but safe harbor, lush tropical rainforests, and a mountainous interior that includes a small, active volcano. </p>
@@ -38,19 +38,19 @@
         </div>
         <div class="grid-container">
             <div class="grid-card">
-                <img class="grid-img" src="./Assets/grid/alfiano-sutianto-BBBDwYtwkyM-unsplash.jpg" alt="Ocean Boat Tour"/>
+                <img class="grid-img" src="./Assets/grid/alfiano-sutianto-BBBDwYtwkyM-unsplash.jpg" alt="Ocean Boat Tour captured by Sutianto, A. (2019). Unsplash."/>
                 <h3>Plan Your Excursions</h3>
                 <p>From Volcano hikes to snorkeling adventures, discover the best activities on the island.</p>
                 <a href="./visitor-pages/entertainment.html" class="text-link">Get more information</a>
             </div>
             <div class="grid-card">
-                <img class="grid-img" src="./Assets/grid/sara-dubler-Koei_7yYtIo-unsplash.jpg" alt="Ocean Boat Tour"/>
+                <img class="grid-img" src="./Assets/grid/sara-dubler-Koei_7yYtIo-unsplash.jpg" alt="Taniti Resort captured by Dubler, S. (2018). Unsplash." title="Dubler, S. (2018). Unsplash."/>
                 <h3>Where to Stay</h3>
                 <p>Find the perfect accommodations, from beachfront resorts to cozy island bungalows.</p>
                 <a href="./visitor-pages/lodging.html" class="text-link">Get more information</a>
             </div>
             <div class="grid-card">
-                <img class="grid-img" src="./Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Ocean Boat Tour"/>
+                <img class="grid-img" src="./Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Oceanfront dinner captured by Haleem, M. (2018). Unsplash." title="Haleem, M. (2018). Unsplash."/>
                 <h3>Where to Eat</h3>
                 <p>Explore Taniti's top restaurants, featuring fresh seafood, local cuisine, and more.</p>
                 <a href="./visitor-pages/restaurants.html" class="text-link">Get more information</a>
@@ -59,30 +59,35 @@
         
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
-            <a href="./index.html" class="page">HOME</a>
-            <a href="./index.html#about" class="section">About</a>
-            <a href="./index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="./visitor.html" class="page">VISITORS</a>
-            <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
-            <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
-            <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
-            <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
-            <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="./faqs.html" class="page">FAQs</a>
-            <a href="./faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="./faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="./faqs.html#language" class="section">Language</a>
-            <a href="./faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="./faqs.html#crime" class="section">Crime Rates</a>
-            <a href="./faqs.html#holidays" class="section">Holidays</a>
-            <a href="./faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
