--- a/visitor-pages/entertainment.html
+++ b/visitor-pages/entertainment.html
@@ -38,22 +38,22 @@
                     <h2>Cultural & Educational Experiences</h2>
                     <p>Visit our local museum and art galleries to learn about Taniti’s rich heritage.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/entertainment/gallery/raychan-kJQ6cDyodAM-unsplash.jpg" alt="art gallery on easels"/>
-                        <img class="container-img2" src="../Assets/entertainment/gallery/y-k-oEMoxk1ATx0-unsplash.jpg" alt="museum showing whale skeleton"/>
+                        <img class="container-img2" src="../Assets/entertainment/gallery/raychan-kJQ6cDyodAM-unsplash.jpg" alt="art gallery on easels captured by Raychan. (2017). Unsplash." title="Raychan. (2017). Unsplash."/>
+                        <img class="container-img2" src="../Assets/entertainment/gallery/y-k-oEMoxk1ATx0-unsplash.jpg" alt="museum showing whale skeleton captured by Yokeboy. (2018). Unsplash." title="Yokeboy. (2018). Unsplash."/>
                     </div>
                     <h2>Outdoor Adventures & Excursions</h2>
                     <p>Go snorkeling, zip-lining, take a helicopter ride, or take a volcano tour to experience Taniti’s wild side.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/entertainment/outdoor/lisa-marie-theck-akR-1957oQA-unsplash.jpg" alt="woman ziplining over rainforest"/>
-                        <img class="container-img2" src="../Assets/entertainment/outdoor/thomas-ashlock-7G5dkthFyxA-unsplash.jpg" alt="surfing in ocean"/>
+                        <img class="container-img2" src="../Assets/entertainment/outdoor/lisa-marie-theck-akR-1957oQA-unsplash.jpg" alt="woman ziplining over rainforest captured by Theck, L. (2024). Unsplash." title="Theck, L. (2024). Unsplash."/>
+                        <img class="container-img2" src="../Assets/entertainment/outdoor/thomas-ashlock-7G5dkthFyxA-unsplash.jpg" alt="surfing in ocean captured by Ashlock, T. (2016). Unsplash." title="Ashlock, T. (2016). Unsplash. "/>
                     </div>
                     <h2>Nightlife & Social Spots</h2>
                     <p>Enjoy craft beer at a local microbrewery, relax at one of Taniti’s pubs, or Dance the night away at a new dance club featuring live DJs.</p>
                     <h2>Family Fun & Recreational Activities</h2>
                     <p>Visit the arcade, movie theater, or bowling alley for laid-back fun. Be on the look out for a nine-hole golf course coming soon!</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/entertainment/family/carl-raw-8Gdayy2Lhi0-unsplash.jpg" alt="arcade"/>
-                        <img class="container-img2" src="../Assets/entertainment/family/derek-martin-m4o5RuY1waY-unsplash.jpg" alt="bowling"/>
+                        <img class="container-img2" src="../Assets/entertainment/family/carl-raw-8Gdayy2Lhi0-unsplash.jpg" alt="arcade captured by Raw, C. (2017). Unsplash." title="Raw, C. (2017). Unsplash."/>
+                        <img class="container-img2" src="../Assets/entertainment/family/derek-martin-m4o5RuY1waY-unsplash.jpg" alt="bowling captured by Martin, D. Unsplash." title="Martin, D. Unsplash."/>
                     </div>
                     <h2>Merriton Landing: The Hub of Entertainment</h2>
                     <p>Many of these attractions are located in Merriton Landing, a rapidly developing area on the north side of Yellow Leaf Bay. This vibrant district is becoming the go-to spot for entertainment, dining, and nightlife on the island.</p>
@@ -63,30 +63,35 @@
         </div>
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="../index.html">Taniti</a>
-            <a href="../index.html" class="page">HOME</a>
-            <a href="../index.html#about" class="section">About</a>
-            <a href="../index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./restaurants.html" class="section">Restaurants</a>
-            <a href="./grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./lodging.html" class="section">Lodging</a>
-            <a href="./entertainment.html" class="section">Entertainment</a>
-            <a href="./sightseeing.html" class="section">Sightseeing</a>
-            <a href="./transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="../faqs.html" class="page">FAQs</a>
-            <a href="../faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="../faqs.html#language" class="section">Language</a>
-            <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#crime" class="section">Crime Rates</a>
-            <a href="../faqs.html#holidays" class="section">Holidays</a>
-            <a href="../faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
