--- a/visitor-pages/grocery-stores.html
+++ b/visitor-pages/grocery-stores.html
@@ -37,9 +37,9 @@
                     <p>Whether you’re stocking up for a long stay or just need a quick snack, Taniti offers several options for grocery shopping. From full-sized supermarkets to smaller convenience stores, visitors and locals alike can easily find fresh produce, pantry essentials, and snacks throughout the island.
                     </p>
                     <div class="container">
-                        <img class="container-img3" src="../Assets/grocery/nrd-D6Tu_L3chLE-unsplash.jpg" alt="Vegetables in Grocery Store"/>
-                        <img class="container-img3" src="../Assets/grocery/priscilla-du-preez-L3lznpRPZbI-unsplash.jpg" alt="Bag of groceries"/>
-                        <img class="container-img3" src="../Assets/grocery/scott-warman-NpNvI4ilT4A-unsplash.jpg" alt="Close up of Vegetables in grocery store"/>
+                        <img class="container-img3" src="../Assets/grocery/nrd-D6Tu_L3chLE-unsplash.jpg" alt="Vegetables in Grocery Store captured by nrd. (2018). Unsplash." title="nrd. (2018). Unsplash."/>
+                        <img class="container-img3" src="../Assets/grocery/priscilla-du-preez-L3lznpRPZbI-unsplash.jpg" alt="Bag of groceries captured by Preez, P. (2019). Unsplash." title="Preez, P. (2019). Unsplash."/>
+                        <img class="container-img3" src="../Assets/grocery/scott-warman-NpNvI4ilT4A-unsplash.jpg" alt="Close up of Vegetables in grocery store captured by Warman, S. (2018). Unsplash." title="Warman, S. (2018). Unsplash."/>
                     </div>
                     <h2>Grocery Shopping Options in Taniti</h2>
                     <p><strong>Supermarkets –</strong> Taniti has two full-sized supermarkets that offer a wide variety of groceries, fresh produce, and household essentials. These are the best places to find everything you need in one stop.</p>
@@ -51,30 +51,35 @@
         </div>
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="../index.html">Taniti</a>
-            <a href="../index.html" class="page">HOME</a>
-            <a href="../index.html#about" class="section">About</a>
-            <a href="../index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./restaurants.html" class="section">Restaurants</a>
-            <a href="./grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./lodging.html" class="section">Lodging</a>
-            <a href="./entertainment.html" class="section">Entertainment</a>
-            <a href="./sightseeing.html" class="section">Sightseeing</a>
-            <a href="./transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="../faqs.html" class="page">FAQs</a>
-            <a href="../faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="../faqs.html#language" class="section">Language</a>
-            <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#crime" class="section">Crime Rates</a>
-            <a href="../faqs.html#holidays" class="section">Holidays</a>
-            <a href="../faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
