--- a/visitor-pages/lodging.html
+++ b/visitor-pages/lodging.html
@@ -38,23 +38,23 @@
                     <h2>Lodging Options in Taniti</h2>
                     <p><strong>Budget-Friendly Stays –</strong> For travelers looking to save, Taniti has an inexpensive hostel, providing affordable accommodations with a social atmosphere, perfect for backpackers or solo travelers.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/lodging/hostel/ha-nguy-n--lq0Ofvv1pA-unsplash.jpg" alt="lounge and pool area at Taniti Hostel"/>
-                        <img class="container-img2" src="../Assets/lodging/hostel/tobias-tullius-pb7gfl7_Ni8-unsplash.jpg" alt="relaxing in a hammock"/>
+                        <img class="container-img2" src="../Assets/lodging/hostel/ha-nguy-n--lq0Ofvv1pA-unsplash.jpg" alt="lounge and pool area at Taniti Hostel captured by " title=""/>
+                        <img class="container-img2" src="../Assets/lodging/hostel/tobias-tullius-pb7gfl7_Ni8-unsplash.jpg" alt="relaxing in a hammock captured by " title=""/>
                     </div>
                     <p><strong>Family-Owned Hotels –</strong> There are many small, family-owned hotels across the island, offering warm hospitality, comfortable rooms, and an authentic local experience.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/lodging/hotels/milin-john-K_uEYaLheEA-unsplash.jpg" alt="Red hotel in Taniti"/>
-                        <img class="container-img2" src="../Assets/lodging/hotels/toa-heftiba-bnoPZ9aTyWQ-unsplash.jpg" alt="white hotel in taniti"/>
+                        <img class="container-img2" src="../Assets/lodging/hotels/milin-john-K_uEYaLheEA-unsplash.jpg" alt="Red hotel in Taniti captured by John, M. (2023). Unsplash." title="John, M. (2023). Unsplash."/>
+                        <img class="container-img2" src="../Assets/lodging/hotels/toa-heftiba-bnoPZ9aTyWQ-unsplash.jpg" alt="white hotel in taniti captured by Heftiba, T. (2018). Unsplash." title="Heftiba, T. (2018). Unsplash."/>
                     </div>
                     <p><strong>Bed & Breakfasts –</strong> A growing number of B&Bs provide a home-like stay, often featuring homemade breakfasts and personalized service. These are great for visitors looking for a quieter, more intimate lodging experience.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/lodging/bnbs/cory-bjork-5TMWVVHLUnI-unsplash.jpg" alt="private lounge area"/>
-                        <img class="container-img2" src="../Assets/lodging/bnbs/sasha-kaunas-hEAGekaiJ8g-unsplash.jpg" alt="wooden lodge for bed and breakfast"/>
+                        <img class="container-img2" src="../Assets/lodging/bnbs/cory-bjork-5TMWVVHLUnI-unsplash.jpg" alt="private lounge area captured by Bjork, C. (2022). Unsplash." title="Bjork, C. (2022). Unsplash."/>
+                        <img class="container-img2" src="../Assets/lodging/bnbs/sasha-kaunas-hEAGekaiJ8g-unsplash.jpg" alt="wooden lodge for bed and breakfast captured by Kuanas. S. (2020). Unsplash." title="Kuanas. S. (2020). Unsplash."/>
                     </div>
                     <p><strong>Luxury Resort –</strong> For those seeking a high-end stay, Taniti has one large, four-star resort, offering premium amenities, ocean views, and top-tier service.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/lodging/resort/cauayan-island-resort-JNoJ-eisUuY-unsplash.jpg" alt="lounge and pool area at Taniti resort"/>
-                        <img class="container-img2" src="../Assets/lodging/resort/the-anam-_twiIcIsp2s-unsplash.jpg" alt="lounge and pool area at Taniti resort"/>
+                        <img class="container-img2" src="../Assets/lodging/resort/cauayan-island-resort-JNoJ-eisUuY-unsplash.jpg" alt="lounge and pool area at Taniti resort captured by cauayanislandresort. (2020). Unsplash." title="cauayanislandresort. (2020). Unsplash."/>
+                        <img class="container-img2" src="../Assets/lodging/resort/the-anam-_twiIcIsp2s-unsplash.jpg" alt="lounge and pool area at Taniti resort captured by Anam, T. (2020). Unsplash." title="Anam, T. (2020). Unsplash."/>
                     </div>
                     <p>No matter your travel style or budget, Taniti’s lodging options provide safe, well-maintained accommodations with something for everyone. Whether you’re here for adventure, relaxation, or cultural immersion, you’ll find the perfect place to stay.</p>
                 </div>
@@ -62,30 +62,35 @@
         </div>
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="../index.html">Taniti</a>
-            <a href="../index.html" class="page">HOME</a>
-            <a href="../index.html#about" class="section">About</a>
-            <a href="../index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./restaurants.html" class="section">Restaurants</a>
-            <a href="./grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./lodging.html" class="section">Lodging</a>
-            <a href="./entertainment.html" class="section">Entertainment</a>
-            <a href="./sightseeing.html" class="section">Sightseeing</a>
-            <a href="./transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="../faqs.html" class="page">FAQs</a>
-            <a href="../faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="../faqs.html#language" class="section">Language</a>
-            <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#crime" class="section">Crime Rates</a>
-            <a href="../faqs.html#holidays" class="section">Holidays</a>
-            <a href="../faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
