--- a/visitor-pages/restaurants.html
+++ b/visitor-pages/restaurants.html
@@ -36,17 +36,17 @@
                     <h1>Restaurants</h1>
                     <p>Taniti offers a diverse dining experience, blending local island flavors with international favorites. With 10 restaurants across the island, visitors can enjoy everything from freshly caught seafood to American comfort food and Pan-Asian cuisine.</p>
                     <div class="container">
-                        <img src="../Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Beachfront restaurants in Taniti"/>
+                        <img src="../Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Beachfront restaurants in Taniti captured by Haleem, M. (2018). Unsplash." title="Haleem, M. (2018). Unsplash."/>
                     </div>
                     <h2>Fresh Seafood & Rice</h2>
                     <p>Taniti’s five seafood-focused restaurants serve up the best of the island’s local flavors, featuring freshly caught fish, traditional rice dishes, and tropical ingredients. These restaurants offer an authentic taste of Tanitian cuisine, perfect for those looking to experience island life through food.</p>
                     <div class="container">
-                        <img src="../Assets/food/dan-gold-E6HjQaB7UEA-unsplash.jpg" alt="American Food Cheeseburgers restaurants in Taniti"/>
+                        <img src="../Assets/food/dan-gold-E6HjQaB7UEA-unsplash.jpg" alt="American Food Cheeseburgers restaurants in Taniti captured by Gold, D. (2016). Unsplash." title="Gold, D. (2016). Unsplash."/>
                     </div>
                     <h2>American-Style Dining</h2>
                     <p>For visitors craving familiar flavors, three restaurants on the island specialize in American-style meals. Whether you’re in the mood for a hearty breakfast, a classic burger, or a comforting plate of fries, these casual dining spots offer a taste of home.</p>
                     <div class="container">
-                        <img src="../Assets/food/jakub-kapusnak-4f4YZfDMLeU-unsplash.jpg" alt="Pan-Asian Food in Taniti"/>
+                        <img src="../Assets/food/jakub-kapusnak-4f4YZfDMLeU-unsplash.jpg" alt="Pan-Asian Food in Taniti captured by Kapusnak, J. (2017). Unsplash." title="Kapusnak, J. (2017). Unsplash."/>
                     </div>
                     <h2>Pan-Asian Cuisine</h2>
                     <p>Bringing together bold flavors from across Asia, two restaurants in Taniti offer Pan-Asian dishes. These spots are perfect for those looking to explore rich, savory, and spicy flavors with a tropical twist.</p>
@@ -56,30 +56,35 @@
         </div>
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="../index.html">Taniti</a>
-            <a href="../index.html" class="page">HOME</a>
-            <a href="../index.html#about" class="section">About</a>
-            <a href="../index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./restaurants.html" class="section">Restaurants</a>
-            <a href="./grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./lodging.html" class="section">Lodging</a>
-            <a href="./entertainment.html" class="section">Entertainment</a>
-            <a href="./sightseeing.html" class="section">Sightseeing</a>
-            <a href="./transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="../faqs.html" class="page">FAQs</a>
-            <a href="../faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="../faqs.html#language" class="section">Language</a>
-            <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#crime" class="section">Crime Rates</a>
-            <a href="../faqs.html#holidays" class="section">Holidays</a>
-            <a href="../faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
