--- a/visitor-pages/sightseeing.html
+++ b/visitor-pages/sightseeing.html
@@ -42,15 +42,15 @@
                     <p>Take a boat tour around Taniti’s coastline, discovering hidden coves and marine life.</p>
                     <p>Join a bus tour for a guided experience of the island’s most famous landmarks and scenic spots.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/sightseeing/dan-russo-_P4U8oaOgBM-unsplash.jpg" alt="waterfall in rainforest"/>
-                        <img class="container-img2" src="../Assets/sightseeing/toby-elliott-2Z63y2F3S20-unsplash.jpg" alt="active volcano"/>
+                        <img class="container-img2" src="../Assets/sightseeing/dan-russo-_P4U8oaOgBM-unsplash.jpg" alt="waterfall in rainforest captured by Russo, D. (2020). Unsplash." title="Russo, D. (2020). Unsplash."/>
+                        <img class="container-img2" src="../Assets/sightseeing/toby-elliott-2Z63y2F3S20-unsplash.jpg" alt="active volcano captured by Elliot, T. (2021). Unsplash." title="Elliot, T. (2021). Unsplash."/>
                     </div>
                     <h2>Rainforest Hikes & Volcano Exploration</h2>
                     <p>Immerse yourself in nature with a guided rainforest hike, where you can spot exotic wildlife and lush tropical plants.</p>
                     <p>Visit Taniti’s active volcano, an awe-inspiring natural wonder that attracts visitors eager to see its rugged landscapes up close.</p>
                     <div class="container">
-                        <img class="container-img2" src="../Assets/sightseeing/jan-gemerle-PprAR6J4a3w-unsplash.jpg" alt="monkey in rainforest"/>
-                        <img class="container-img2" src="../Assets/sightseeing/randall-ruiz-LVnJlyfa7Zk-unsplash.jpg" alt="sea turtle in ocean"/>
+                        <img class="container-img2" src="../Assets/sightseeing/jan-gemerle-PprAR6J4a3w-unsplash.jpg" alt="monkey in rainforest. captured by Gemerle, J. (2019). Unsplash" title="Gemerle, J. (2019). Unsplash"/>
+                        <img class="container-img2" src="../Assets/sightseeing/randall-ruiz-LVnJlyfa7Zk-unsplash.jpg" alt="sea turtle in ocean. captured by Ruiz, R. (2017). Unsplash" title="Ruiz, R. (2017). Unsplash"/>
                     </div>
                     <p>Whether you’re strolling through historic streets, soaking up the sun on pristine beaches, or embarking on an adventurous island tour, Taniti offers unforgettable sightseeing opportunities for every traveler.</p>
                 </div>
@@ -58,30 +58,35 @@
         </div>
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="../index.html">Taniti</a>
-            <a href="../index.html" class="page">HOME</a>
-            <a href="../index.html#about" class="section">About</a>
-            <a href="../index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./restaurants.html" class="section">Restaurants</a>
-            <a href="./grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./lodging.html" class="section">Lodging</a>
-            <a href="./entertainment.html" class="section">Entertainment</a>
-            <a href="./sightseeing.html" class="section">Sightseeing</a>
-            <a href="./transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="../faqs.html" class="page">FAQs</a>
-            <a href="../faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="../faqs.html#language" class="section">Language</a>
-            <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#crime" class="section">Crime Rates</a>
-            <a href="../faqs.html#holidays" class="section">Holidays</a>
-            <a href="../faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
