--- a/visitor.html
+++ b/visitor.html
@@ -43,30 +43,35 @@
         </div>
     </main>
     <footer>
-        <div class="col">
-            <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
-            <a href="./index.html" class="page">HOME</a>
-            <a href="./index.html#about" class="section">About</a>
-            <a href="./index.html#population" class="section">Population</a>
+        <div class="footer-container">
+                <div class="col">
+                <a class="pacifico-regular taniti" href="./index.html">Taniti</a>
+                <a href="./index.html" class="page">HOME</a>
+                <a href="./index.html#about" class="section">About</a>
+                <a href="./index.html#population" class="section">Population</a>
+            </div>
+            <div class="col">
+                <a href="./visitor.html" class="page">VISITORS</a>
+                <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
+                <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
+                <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
+                <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
+                <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
+                <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
+            </div>
+            <div class="col">
+                <a href="./faqs.html" class="page">FAQs</a>
+                <a href="./faqs.html#outlets" class="section">Power Outlets</a>
+                <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+                <a href="./faqs.html#language" class="section">Language</a>
+                <a href="./faqs.html#hospitals" class="section">Hospitals</a>
+                <a href="./faqs.html#crime" class="section">Crime Rates</a>
+                <a href="./faqs.html#holidays" class="section">Holidays</a>
+                <a href="./faqs.html#currency" class="section">Currency</a>
+            </div>
         </div>
-        <div class="col">
-            <a href="./visitor.html" class="page">VISITORS</a>
-            <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
-            <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
-            <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
-            <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
-            <a href="./visitor-pages/sightseeing.html" class="section">Sightseeing</a>
-            <a href="./visitor-pages/transportation.html" class="section">Transportation</a>
-        </div>
-        <div class="col">
-            <a href="./faqs.html" class="page">FAQs</a>
-            <a href="./faqs.html#outlets" class="section">Power Outlets</a>
-            <a href="./faqs.html#alcohol" class="section">Alcohol</a>
-            <a href="./faqs.html#language" class="section">Language</a>
-            <a href="./faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="./faqs.html#crime" class="section">Crime Rates</a>
-            <a href="./faqs.html#holidays" class="section">Holidays</a>
-            <a href="./faqs.html#currency" class="section">Currency</a>
+        <div class="text-link-container">
+            <a href="https://unsplash.com/collections/pQOVVpuBR0Q/taniti-used" target="_blank" class="in-text-link">Images sourced from Unsplash: Click here to see the collection.</a>
         </div>
     </footer>
 </body>
